--- a/js/sdks/packages/react-sdk/package.json
+++ b/js/sdks/packages/react-sdk/package.json
@@ -46,18 +46,17 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@lunasec/browser-common": "^1.0.0",
-    "@types/styled-components": "^5.1.10",
-    "classnames": "^2.3.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.0"
+    "@lunasec/browser-common": "^1.0.0"
   },
   "peerDependencies": {
     "@lunasec/browser-common": "^1.0.0",
-    "react": ">=17.0.0"
+    "classnames": ">=2.0.0",
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0",
+    "styled-components": ">=5.0.0"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.10",
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^14.14.37",
