--- a/js/demo-apps/packages/express-back-end/package.json
+++ b/js/demo-apps/packages/express-back-end/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.ts",
   "scripts": {
-    "start:dev": "npm run compile && node ./build/main.js",
+    "start:dev": "ts-node-dev ./src/main.ts",
     "compile": "tsc -p tsconfig.json",
     "copy-dev-files": "cp -R views build/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,17 +15,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@lunasec/node-sdk": "^1.0.0",
     "@lunasec/browser-common": "^1.0.0",
+    "@lunasec/node-sdk": "^1.0.0",
     "@lunasec/tokenizer-sdk": "^1.0.0",
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.41",
-    "@types/cors": "^2.8.10",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
-    "typescript": "^4.2.3",
-    "cors": "^2.8.5"
+    "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.1.6"
   }
 }
