--- a/js/demo-apps/packages/express-back-end/package.json
+++ b/js/demo-apps/packages/express-back-end/package.json
@@ -2,9 +2,9 @@
   "name": "secure-frame-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "start:dev": "ts-node-dev ./src/main.ts",
+    "start:dev": "ts-node-dev ./src/server.ts",
     "compile": "tsc -p tsconfig.json",
     "copy-dev-files": "cp -R views build/",
     "test": "echo \"Error: no test specified\" && exit 1"
