remove lunasec components

--- a/js/demo-apps/packages/full-example-apps/package.json
+++ b/js/demo-apps/packages/full-example-apps/package.json
@@ -18,7 +18,7 @@
     "build-client": "cross-env NODE_ENV=production TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack --mode production",
     "build-server": "tsc -b src/server",
     "dev-client": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve",
-    "dev-server": "npm run init-db && LUNASEC_SIGNING_KEY=$(cat fixtures/lunasec_signing_key_dev | base64 -w0) tsc-watch --noClear -b ./src/server/tsconfig.json --onSuccess \"node --enable-source-maps index.js\"",
+    "dev-server": "npm run init-db && tsc-watch --noClear -b ./src/server/tsconfig.json --onSuccess \"node --enable-source-maps index.js\"",
     "dev": "concurrently --prefix \"[{name}]\" --names \"SERVER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run dev-server\" \"npm run dev-client\"",
     "build": "concurrently --prefix \"[{name}]\" --names \"SERVER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold\" \"npm run build-server\" \"npm run build-client\""
   },
